<resources>
    <string name="api_key">1b48a8ddfcc143f2ac1c71345c00f846</string>

    <string name="app_name">RecipeFinder</string>
    <string name="welcomeTxt">Welcome to RecipeFinder</string>
    <string name="howToHelp">How can we help you today?</string>

    <string name="categoryBtn">Search by Category</string>
    <string name="keywordBtn">Search by Keyword</string>
    <string name="savedRecipesBtn">View Saved Recipes</string>

    <string name="recipeName">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipeCategory">Recipe Category</string>
    <string name="recipeSteps">Recipe Steps</string>

    <string name="backBtn">Back</string>
    <string name="chooseCategory">Choose a Category:</string>

    <string-array name="tags">
        <item>main course</item>
        <item>side dish</item>
        <item>dessert</item>
        <item>appetizer</item>
        <item>salad</item>
        <item>bread</item>
        <item>breakfast</item>
        <item>soup</item>
        <item>beverage</item>
        <item>sauce</item>
        <item>marinade</item>
        <item>fingerfood</item>
        <item>snack</item>
        <item>drink</item>
    </string-array>



</resources>