<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewRecipe">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backBtn"
                android:textSize="15dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/recipeNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/recipeName"
                android:textSize="30sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/recipeCategoryTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/recipeCategory"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/ingredientsTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/ingredients"
                android:textSize="23sp"
                />

            <TextView
                android:id="@+id/recipeStepsTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/recipeSteps"
                android:textSize="23sp"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>