<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ash_gray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeTxt"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/howToHelp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/shamrock_green"
        android:layout_marginTop="10dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/shamrock_green">
        
        <androidx.appcompat.widget.SearchView
            android:id="@+id/homeSearchView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:queryHint="Search Recipes"
            app:iconifiedByDefault="false"
            
            />
        
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/categoryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/categoryBtn"
        android:textSize="15sp"
        />

<!--    <Button-->
<!--        android:id="@+id/keywordBtn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:text="@string/keywordBtn"-->
<!--        android:textSize="15sp"-->
<!--        />-->

    <Button
        android:id="@+id/savedRecipesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/savedRecipesBtn"
        android:textSize="15sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        />

</LinearLayout>