<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ash_gray"
    tools:context=".RecipeDetails">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backBtn"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/recipeNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipeName"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:padding="10dp"
                />

<!--            <TextView-->
<!--                android:id="@+id/recipeSourceTV"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Source"-->
<!--                android:textSize="15sp"-->
<!--                android:gravity="center"-->
<!--                android:textStyle="italic"-->
<!--                android:padding="10dp"-->
<!--                />-->
            
            <ImageView
                android:id="@+id/recipeImageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                />
            
            <TextView
                android:id="@+id/recipeSummaryTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Summary"
                android:textSize="15sp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/ingredientsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:gravity="center"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerRecipeIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerRecipeSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>